multitenancy-benchmarks/require-namespace-quota/.kyverno-test/resource.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testing-ns
spec: {}

---

apiVersion: v1
kind: ResourceQuota
metadata:
  name: good-resource-quota
  namespace: testing-ns
spec:
  hard:
    cpu: "4"
    memory: 8Gi
    ephemeral-storage: 10Gi
