multitenancy-benchmarks/require-namespace-quota/.kyverno-test/kyverno-test.yaml
# apiVersion: cli.kyverno.io/v1alpha1
# kind: Test
# metadata:
#   name: kyverno-test.yaml
# policies:
# - ../require-namespace-quota.yaml
# resources:
# - resource.yaml
# results:
# - kind: Namespace
#   policy: require-namespace-quota
#   resources:
#   - testing-ns
#   result: pass
#   rule: resourcequotas
# variables: values.yaml
